--- a/projeto-inicial-spotify/index.html
+++ b/projeto-inicial-spotify/index.html
@@ -1,72 +1,123 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-  <head>
-    <!-- Meta tags Obrigatórias -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+<head>
+  <!-- Meta tags Obrigatórias -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Font Awesome -->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+    integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
-    <!-- HTML5Shiv -->
-    <!--[if lt IE 9]>
+  <!-- Font Awesome -->
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
+    integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+
+  <!-- HTML5Shiv -->
+  <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
     <![endif]-->
 
-    <!-- Estilo customizado -->
-    <link rel="stylesheet" type="text/css" href="css/estilo.css">
+  <!-- Estilo customizado -->
+  <link rel="stylesheet" type="text/css" href="css/estilo.css">
 
-    <title>Música para todos - Spotify</title>
-    <link rel="icon" href="imagens/favicon.png" type="image/x-icon">
-  </head>
-  <body>
-    <header>
+  <title>Música para todos - Spotify</title>
+  <link rel="icon" href="imagens/favicon.png" type="image/x-icon">
+</head>
+
+<body>
+  <header>
     <nav class="navbar navbar-expand-md  navbar-dark transparencia fixed-top">
       <div class="container">
         <div class="navbar-brand "> <a href=""> <img src="imagens/spotify.svg" width="142"></a> </div>
 
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#NavbarHeader" aria-controls="NavbarHeader" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#NavbarHeader"
+          aria-controls="NavbarHeader" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
 
-      <div class="collapse navbar-collapse" id="NavbarHeader">
-      <ul class="navbar-nav ml-auto">
-        <li class="nav-item"><a class="px-4 py-4 nav-link" href="">Premium</a></li>
-        <li class="nav-item"><a class="px-4 py-4 nav-link" href="">Ajuda</a></li>
-        <li class="nav-item"><a class="px-4 py-4 nav-link" href="">Baixar</a></li>
-        <li class="linhaV d-none d-lg-block "> </li>
-        <li class="nav-item"><a class="px-4 py-4 nav-link text-nowrap" href="">Inscrever-se</a></li>
-        <li class="nav-item"><a class="px-4 py-4 nav-link" href="">Entrar</a></li>
-      </ul>
-      </div>
-      </div>
-    </nav><!--Fim navegação-->
-    </header><!--Fim cabeçalho-->
-    
-    <section id="home" class="d-flex">
-      <div class="container align-self-center">
-        <div class="row">
-          <div class="col-md-12 capa">
-            <h1 >Música para todos</h1>
-            <a href="" class="btn btn-custom btn-roxo btn-lg">
-              Aproveite o Spotify Free
-            </a>
-            <a href="" class="btn btn-custom btn-branco btn-lg">
-              Aproveite o Spotify Premium
-            </a>
-          </div>
+        <div class="collapse navbar-collapse" id="NavbarHeader">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item"><a class="px-4 py-4 nav-link" href="">Premium</a></li>
+            <li class="nav-item"><a class="px-4 py-4 nav-link" href="">Ajuda</a></li>
+            <li class="nav-item"><a class="px-4 py-4 nav-link" href="">Baixar</a></li>
+            <li class="linhaV d-none d-lg-block "> </li>
+            <li class="nav-item"><a class="px-4 py-4 nav-link text-nowrap" href="">Inscrever-se</a></li>
+            <li class="nav-item"><a class="px-4 py-4 nav-link" href="">Entrar</a></li>
+          </ul>
         </div>
       </div>
-    </section>
+    </nav>
+    <!--Fim navegação-->
+  </header>
+  <!--Fim cabeçalho-->
+
+  <section id="home" class="d-flex">
+    <div class="container align-self-center">
+      <div class="row">
+        <div class="col-md-12 capa">
+          <h1>Música para todos</h1>
+          <a href="" class="btn btn-custom btn-roxo btn-lg">
+            Aproveite o Spotify Free
+          </a>
+          <a href="" class="btn btn-custom btn-branco btn-lg">
+            Aproveite o Spotify Premium
+          </a>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!--Fim Seção Home-->
+
+  <section id="servicos">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6">
+          <div class="row albuns">
+            <div class="col-md-6">
+              <img src="imagens/img1.jpg" class="img-fluid">
+            </div>
+            <div class="col-md-6">
+              <img src="imagens/img3.jpg" class="img-fluid">
+            </div>
+          </div>
+          <div class="row albuns">
+            <div class="col-md-6">
+              <img src="imagens/img2.jpg" class="img-fluid">
+            </div>
+            <div class="col-md-6">
+              <img src="imagens/img4.jpg" class="img-fluid">
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <h2>O que o spotify tem?</h2>
+          <h3>Músicas</h3>
+          <p>O spotify tem milhões de músicas. Escute todos os seus artistas favoritos, descubra músicas novas e muito mais em um só lugar.</p>
+          <h3>Playlists</h3>
+          <p>No Spotify você encontra uma playlist para cada momento. Todas feitas por fanáticos e especialistas por música.</p>
+          <h3>Novos lançamentos</h3>
+          <p>Escute os novos lançamentos de singles e álbuns da semana e veja o que está bombando no top 50.</p>
+        </div>
+      </div>
+
+    </div>
+
+  </section>
 
 
-    <!-- JavaScript (Opcional) -->
-    <!-- jQuery primeiro, depois Popper.js, depois Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-  </body>
+  <!-- JavaScript (Opcional) -->
+  <!-- jQuery primeiro, depois Popper.js, depois Bootstrap JS -->
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+    integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+    integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+    crossorigin="anonymous"></script>
+</body>
+
 </html>
