--- a/projeto-inicial-spotify/index.html
+++ b/projeto-inicial-spotify/index.html
@@ -76,18 +76,18 @@
         <div class="col-md-6">
           <div class="row albuns">
             <div class="col-md-6">
-              <img src="imagens/img1.jpg" class="img-fluid">
+              <img src="imagens/img1.jpg" class="img-fluid d-none d-md-block">
             </div>
             <div class="col-md-6">
-              <img src="imagens/img3.jpg" class="img-fluid">
+              <img src="imagens/img3.jpg" class="img-fluid d-none d-md-block">
             </div>
           </div>
           <div class="row albuns">
             <div class="col-md-6">
-              <img src="imagens/img2.jpg" class="img-fluid">
+              <img src="imagens/img2.jpg" class="img-fluid d-none d-md-block">
             </div>
             <div class="col-md-6">
-              <img src="imagens/img4.jpg" class="img-fluid">
+              <img src="imagens/img4.jpg" class="img-fluid d-none d-md-block">
             </div>
           </div>
         </div>
@@ -101,9 +101,35 @@
           <p>Escute os novos lançamentos de singles e álbuns da semana e veja o que está bombando no top 50.</p>
         </div>
       </div>
-
     </div>
+  </section>
 
+  <section id="recursos">
+    <div class="container">
+    <div class="row">
+      <div class="col-md-4">
+        <h2 >Fácil</h1>
+        <h3>Buscar</h2>
+          <p>Já sabe o que quer escutar? É só procurar e apertar o play.</p>
+
+          <h3>Navegar</h3>
+          <p>Veja os novos lançamentos, o que está bombando nas paradas e as melhores playlists para o seu momento.</p>
+
+          <h3>Descobrir</h3>
+          <p>Curta músicas novas toda segunda-feira com uma playlist personalizada pra você. Ou relaxe e curta uma das rádios.</p>
+      </div>
+      <div class="col-md-8 imagens">
+        <div class="row rotacionado">
+          <div class="col-md-6">
+        <img src="imagens/iphone1.png" class="img-fluid d-none d-md-block">
+        </div>
+        <div class="col-md-6">
+        <img src="imagens/iphone2.png" class="img-fluid d-none d-md-block">
+        </div>
+        </div>
+      </div>
+      </div>
+    </div>
   </section>
 
 
