--- a/projeto-inicial-spotify/index.html
+++ b/projeto-inicial-spotify/index.html
@@ -132,6 +132,54 @@
     </div>
   </section>
 
+  <footer>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-2">
+          <img src="imagens/spotify.svg" class="img-fluid" width="142" alt="">
+        </div>
+        <div class="col-md-2">
+          <h4>Company</h4>
+          <ul class="navbar-nav">
+            <li class="nav-item"><a href="" class="nav-link">Sobre</a></li>
+            <li class="nav-item"><a href="" class="nav-link">Empregos</a></li>
+            <li class="nav-item"><a href="" class="nav-link">Imprensa</a></li>
+            <li class="nav-item"><a href="" class="nav-link">Novidades</a></li>
+          </ul>
+        </div>
+        <div class="col-md-2">
+          <h4>Comunidades</h4>
+          <ul class="navbar-nav">
+            <li class="nav-item"><a href="" class="nav-link">Artistas</a></li>
+            <li class="nav-item"><a href="" class="nav-link">Desenvolvedores</a></li>
+            <li class="nav-item"><a href="" class="nav-link">Marcas</a></li>
+          </ul>
+        </div>
+        <div class="col-md-2">
+          <h4>Links Úteis</h4>
+          <ul class="navbar-nav">
+            <li class="nav-item"><a href="" class="nav-link">Ajuda</a></li>
+            <li class="nav-item"><a href="" class="nav-link">Presentes</a></li>
+            <li class="nav-item"><a href="" class="nav-link">Player da web</a></li>
+          </ul>
+        </div>
+        <div class="col-md-4">
+          <ul class=>
+            <li><a href="" >
+              <i class="fab fa-facebook-square"></i>
+            </a></li>
+            <li><a href="" >
+              <i class="fab fa-instagram"></i>
+            </a></li>
+            <li><a href="">
+              <i class="fab fa-twitter-square"></i>
+            </a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </footer>
+
 
   <!-- JavaScript (Opcional) -->
   <!-- jQuery primeiro, depois Popper.js, depois Bootstrap JS -->
