Criação da pagina ajuda e algumas mudanças na principal

--- a/projeto-inicial-spotify/index.html
+++ b/projeto-inicial-spotify/index.html
@@ -77,16 +77,18 @@
             </div><!--Inner-->
           </div><!--Carousel-->
         </div>
-        <a href="#carousel-spotify" class="carousel-control-prev" data-slide="prev">
-          <i class="fas fa-angle-left fa-3x"></i>
-        </a>
-        <a href="#carousel-spotify" class="carousel-control-next" data-slide="next">
-          <i class="fas fa-angle-right fa-3x"></i>
-        </a> <!--Fim controles-->
+        <div class="col-md-6">
+          <a href="#carousel-spotify" class="carousel-control-prev" data-slide="prev">
+            <i class="fas fa-angle-left fa-3x"></i>
+          </a>
+        </div>
+        <div class="col-md-6">
+          <a href="#carousel-spotify" class="carousel-control-next " data-slide="next">
+            <i class="fas fa-angle-right fa-3x"></i>
+          </a> <!--Fim controles-->
+        </div>
       </div>
-      
     </div> <!--container-->
-    
   </section>
   <!--Fim Seção Home-->
 
