--- a/projeto-inicial-spotify/index.html
+++ b/projeto-inicial-spotify/index.html
@@ -40,7 +40,7 @@
         <div class="collapse navbar-collapse" id="NavbarHeader">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item"><a class="px-4 py-4 nav-link" href="">Premium</a></li>
-            <li class="nav-item"><a class="px-4 py-4 nav-link" href="">Ajuda</a></li>
+            <li class="nav-item"><a class="px-4 py-4 nav-link" href="ajuda.html">Ajuda</a></li>
             <li class="nav-item"><a class="px-4 py-4 nav-link" href="">Baixar</a></li>
             <li class="linhaV d-none d-lg-block "> </li>
             <li class="nav-item"><a class="px-4 py-4 nav-link text-nowrap" href="">Inscrever-se</a></li>
@@ -144,7 +144,7 @@
           <p>Curta músicas novas toda segunda-feira com uma playlist personalizada pra você. Ou relaxe e curta uma das
             rádios.</p>
         </div>
-        <div class="col-md-8 imagens">
+        <div class="col-md-8 ">
           <div class="row rotacionado">
             <div class="col-md-6">
               <img src="imagens/iphone1.png" class="img-fluid d-none d-md-block">
